--- a/app/src/main/res/layout/fragment_social.xml
+++ b/app/src/main/res/layout/fragment_social.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,72 +10,54 @@
     <!-- TODO: Update blank fragment layout -->
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/friends2" />
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/friends2"
+        android:layout_below="@id/friends_label"/>
 
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text="XxXAdamus69XxX"
-        android:textAlignment="center"
-        android:textColor="@android:color/black"
-        android:textSize="21sp"
-        android:textStyle="bold" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/stars_amount"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:text="125"
-            android:textSize="17sp"
-            android:layout_centerHorizontal="true"/>
-
-        <ImageView
-            android:id="@+id/star_image"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginLeft="3dp"
-            android:layout_toRightOf="@id/stars_amount"
-            android:src="@drawable/star" />
-    </RelativeLayout>
 
     <View
+        android:id="@+id/separator"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#96a6a6a6"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_below="@id/imageView4"/>
 
     <TextView
+        android:id="@+id/friends_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/star_image"
-        android:text="Friends"
+        android:text="Friends Ranking"
         android:textAlignment="center"
+        android:layout_alignParentTop="true"
         android:textSize="20sp"
         android:textStyle="bold" />
 
-
+    <Button
+        android:id="@+id/share_button"
+        android:layout_width="200dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimary"
+        android:text="Share your score!"
+        android:textColor="@android:color/white"
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/friends_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/imageView4"
+        android:layout_marginBottom="80dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp">
 
     </ListView>
 
-</LinearLayout>
+
+</RelativeLayout>
+
