--- a/app/src/main/res/layout/friend_cell.xml
+++ b/app/src/main/res/layout/friend_cell.xml
@@ -28,6 +28,18 @@
             android:textColor="@android:color/black"
             android:textSize="17sp" />
 
+
+        <TextView
+            android:id="@+id/friend_points"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="3dp"
+            android:text="150"
+            android:textColor="@android:color/black"
+            android:textSize="17sp" />
     </RelativeLayout>
 
 
